[package]
name = "oscquery"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-server = "0.7"

[dev-dependencies]
ctrlc = "3.4"
rand = "0.8"
